src/assets/sass/pages/_homepage.scss
.latest-collection {
  &__title {
    margin-top: 95px;
    margin-bottom: 95px;
    font-size: 36px;
    line-height: 44px;
  }

  &__button-area {
    width: 100%;
    justify-content: center;
  }

  &__btn {
    width: 335px;
    height: 53px;
    background: var(--clr-primary);
    border-radius: 2px;
    color: var(--clr-secondary);
    font-family: var(--font-secondary);
    font-size: 16px;
    line-height: 21px;
    padding: 16px 32px;
    margin-top: 85px;
    text-transform: uppercase;
    cursor: pointer;
    outline: none;
    border: none;
  }

  &__wrapper-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));

    grid-gap: 25px;
    justify-content: center;
    margin: 2rem 97px;
  }

  

  //profile card container
  &__container {
    background-position: top;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;

    display: flex;
    align-items: flex-end;
    justify-content: center;

    &:hover {
      cursor: pointer;
    }

    &__picture {
      width: 100%;

      &--img {
        width: 100%;
      }
    }

    &__text {
      color: #fff;
      margin: 0 auto;
      /* display: none; */
      /* animation-name: zoom;
      animation-duration: 0.6s; */
      position: absolute;
      bottom: 25%;

      &--heading {
        font-size: 45px;
        /* line-height: 43px; */
        font-family: var(--font-secondary);
        color: #fff;
      }

      &--text {
        font-size: 18px;
        line-height: 23px;
        font-family: var(--font-secondary);
        color: #fff;
      }
    }
  }

  &__wrapper-grid {
    .latest-collection__container:hover .latest-collection__container__text {
      display: flex;
      align-items: center;
      justify-content: center;
      flex-direction: column;
    }
  }

  /* @media screen and (max-width: 1260px) {
    &__wrapper-grid {
      grid-template-columns: repeat(2, 400px);
    }
  } */

  @media screen and (max-width: 860px) {
    &__container {
      height: 100%;
      background-size: contain;
      background-position: top center;
      padding-bottom: 0px;
    }
    &__wrapper-grid {
      margin: 0 16px;
      grid-template-columns: 1fr;
      /* grid-template-rows: 800px; */
    }
  }

  @media screen and (max-width: 500px) {
    &__btn {
      width: 90%;
      margin-top: 50px;
      margin-bottom: 64px;
      text-transform: uppercase;
      cursor: pointer;
    }

    &__title {
      margin-top: 49px;
      margin-bottom: 51px;
      font-size: 26px;
      line-height: 31px;
    }

    &__container {
      height: 100%;
      padding-bottom: 0px;

      &__picture {
        background: linear-gradient(to top, black, white);
        &--img {
          opacity: 0.75;
          background: black;
          display: block;
          // background: linear-gradient(to top, black, red);
        }
      }

      &__text {
        display: flex;
        flex-direction: column;
      }
    }

    &__wrapper-grid {
      margin: 0 16px;
      grid-template-columns: 1fr;
      grid-template-rows: repeat(2, 300px);
    }
  }
}

.feature {
  margin: 3em 0;
  text-align: center;
  font-family: "Lora", serif;
  width: 92vw;
  margin-left: auto;
  margin-right: auto;

  &__image {
    height: auto;
    text-align: center;
    margin-bottom: 4em;
    position: relative;

    &--border {
      height: 211px;
      width: 200px;
      position: absolute;
      bottom: -8px;
      left: calc(50% - 112px);
      border: 6px solid #32d8d2;
      z-index: -1;
    }
  }

  &__text {
    text-align: start;
    color: #2c3d50;
    margin-bottom: 1em;

    &--head {
      font-weight: 400;
      font-family: "Lora", serif;
      font-size: 1.25em;
      line-height: 1.5;
    }

    &--p {
      line-height: 1.3;
    }
  }

  &__cta {
    text-align: start;
    text-transform: uppercase;
    color: #43bde3;
    font-weight: 500;
    cursor: pointer;
    transition: font-size 250ms;

    &--text {
      margin-right: 1.2em;
      backface-visibility: hidden;
    }
  }

  &__divider {
    border: 1px solid #e6e8ea;
    margin: 2em auto;
    width: 75vw;
  }
}

.theme {
  margin: 3em 0;
  text-align: center;
  width: 92vw;
  margin-left: auto;
  margin-right: auto;

  &__section {
    position: relative;
    margin-bottom: 1.5em;
  }

  &__desktop {
    display: none;
  }

  &__nav {
    position: absolute;
    display: flex;
    justify-content: space-between;
    align-self: center;
    width: 100%;
    top: 45%;

    &--icon {
      color: rgba(255, 255, 255, 0.75);
      border-radius: 50%;
      font-size: 2.5em;
      margin: 0 1em;
      cursor: pointer;
      background: rgba(255, 237, 237, 0.35);
      width: 1em;
      height: 1em;
      text-align: center;
      display: flex;
      justify-content: center;
      align-items: center;

      &:hover {
        color: #fff;
      }
    }
  }

  &__title {
    margin-bottom: 2em;
    font-size: 1.625em;
    font-weight: 400;
  }

  &__image {
    width: 90%;
    margin: 0 auto;
    overflow: hidden;

    &--img {
      width: 100%;
      height: auto;
    }
  }

  &__text {
    color: var(--clr-primary);
    font-weight: 400;
    margin: 1em 0;
    text-align: center;
  }
}
/* ... */

